Update mmocore